--- a/app/images.qrc
+++ b/app/images.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>images/archive_icon.png</file>
         <file>images/unarchive_icon.png</file>
+        <file>images/view_icon.png</file>
     </qresource>
 </RCC>
